// Produced by Acceleo JavaScript Generator 1.1.0
import "../ccsds_mal/types.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus019EventAction {
extensions 6 to 106;

  optional ccsds_mal.protobuf.UINTEGER apid = 1;
  optional ccsds_mal.protobuf.UINTEGER rid = 2;
  optional ccsds_mal.protobuf.UINTEGER actionStatus = 3;
  optional ccsds_mal.protobuf.BLOB actionTcPacketHeader = 4;
  optional pusGroundModel.protobuf.PusElement pusElement = 5;
}
